--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,77 @@
-<router-outlet />
+<div class="listbox-container">
+  <ul
+    listbox
+    #listbox="listbox"
+    [wrap]="wrap"
+    [vertical]="vertical"
+    [rovingFocus]="rovingFocus"
+    [followFocus]="followFocus"
+    [skipDisabled]="skipDisabled"
+    [currentIndex]="currentIndex"
+    [multiselectable]="multiselectable"
+    [selectedIndices]="selectedIndices"
+    [typeaheadDelay]="typeaheadDelay"
+    [typeaheadMatcher]="typeaheadMatcher"
+  >
+    @for(state of states; track state) {
+    <li option [searchTerm]="state">
+      <span>{{ state }}</span>
+      <span class="checkmark">✓</span>
+    </li>
+    }
+  </ul>
+  @if (listbox.props.query()) {
+    <span class="typeahead">{{ listbox.props.query() | titlecase }}</span>
+  }
+</div>
+
+{{ listbox.props.query() }}
+
+<div class="hud">
+  <div>
+    <span>Typeahead: {{ listbox.props.query() }}</span>
+  </div>
+  <div>
+    <label for="wrap-input">Wrap: </label>
+    <input id="wrap-input" type="checkbox" [(ngModel)]="wrap" />
+  </div>
+
+  <div>
+    <label for="vertical-input">Vertical: </label>
+    <input id="vertical-input" type="checkbox" [(ngModel)]="vertical" />
+  </div>
+
+  <div>
+    <label for="roving-focus-input">Roving Tabindex: </label>
+    <input id="roving-focus-input" type="checkbox" [(ngModel)]="rovingFocus" />
+  </div>
+
+  <div>
+    <label for="follow-focus-input">Selection Follows Focus: </label>
+    <input id="follow-focus-input" type="checkbox" [(ngModel)]="followFocus" />
+  </div>
+
+  <div>
+    <label for="skip-disabled-input">Skip Disabled Options: </label>
+    <input id="skip-disabled-input" type="checkbox" [(ngModel)]="skipDisabled" />
+  </div>
+
+  <div>
+    <label for="multiselectable-input">Multiselectable: </label>
+    <input id="multiselectable-input" type="checkbox" [(ngModel)]="multiselectable" />
+  </div>
+
+  <div>
+    <label for="current-index-input">Current Index: </label>
+    <input id="current-index-input" type="number" min="0" [max]="states.length - 1" [(ngModel)]="currentIndex" />
+  </div>
+
+  <div>
+    <label for="selected-indices-input">Selected Indices: </label>
+    <select id="selected-indices-input" [(ngModel)]="selectedIndices" [multiple]="multiselectable">
+      @for (state of states; track state) {
+      <option [value]="$index">{{state}}</option>
+      }
+    </select>
+  </div>
+</div>
