--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,16 +20,14 @@
     </li>
     }
   </ul>
-  @if (listbox.composable.query()) {
-    <span class="typeahead">{{ listbox.composable.query() | titlecase }}</span>
+  @if (listbox.composable.typeaheadManager.query()) {
+    <span class="typeahead">{{ listbox.composable.typeaheadManager.query() | titlecase }}</span>
   }
 </div>
 
-{{ listbox.composable.query() }}
-
 <div class="hud">
   <div>
-    <span>Typeahead: {{ listbox.composable.query() }}</span>
+    <span>Typeahead: {{ listbox.composable.typeaheadManager.query() }}</span>
   </div>
   <div>
     <label for="wrap-input">Wrap: </label>
