--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,93 +1,113 @@
-<div class="listbox-container">
-  <ul
-    listbox
-    #listbox="listbox"
-    [wrap]="wrap"
-    [vertical]="vertical"
-    [rovingFocus]="rovingFocus"
-    [followFocus]="followFocus"
-    [skipDisabled]="skipDisabled"
-    [currentIndex]="currentIndex"
-    [multiselectable]="multiselectable"
-    [selectedIndices]="selectedIndices"
-    [typeaheadDelay]="typeaheadDelay"
-    [typeaheadMatcher]="typeaheadMatcher"
-  >
-    @for(state of states; track state) {
-    <li option [searchTerm]="state">
-      <span>{{ state }}</span>
-      <span class="checkmark">✓</span>
-    </li>
-    }
-  </ul>
-  @if (listbox.composable.typeaheadState.query()) {
-  <span class="typeahead">{{ listbox.composable.typeaheadState.query() | titlecase }}</span>
-  }
+<div class="table-example">
+  <div class="scroll-container">
+    <table [wrap]="true" [skipDisabled]="true" grid>
+      <tr row>
+        <td gridcell></td>
+        <td [disabled]="true" gridcell></td>
+        <td [disabled]="true" gridcell></td>
+        <td gridcell></td>
+      </tr>
+      <tr row>
+        <td [disabled]="true" gridcell></td>
+        <td [rowspan]="2" [colspan]="2" gridcell></td>
+        <td [disabled]="true" gridcell></td>
+      </tr>
+      <tr row>
+        <td [disabled]="true" gridcell></td>
+        <td [disabled]="true" gridcell></td>
+      </tr>
+      <tr row>
+        <td gridcell></td>
+        <td [disabled]="true" gridcell></td>
+        <td [disabled]="true" gridcell></td>
+        <td gridcell></td>
+      </tr>
+    </table>
+  </div>
 </div>
 
-<div class="hud">
-  <div>
-    <span>Typeahead: {{ listbox.composable.typeaheadState.query() }}</span>
-  </div>
-  <div>
-    <label for="wrap-input">Wrap: </label>
-    <input id="wrap-input" type="checkbox" [(ngModel)]="wrap" />
-  </div>
-
-  <div>
-    <label for="vertical-input">Vertical: </label>
-    <input id="vertical-input" type="checkbox" [(ngModel)]="vertical" />
-  </div>
-
-  <div>
-    <label for="roving-focus-input">Roving Tabindex: </label>
-    <input id="roving-focus-input" type="checkbox" [(ngModel)]="rovingFocus" />
-  </div>
-
-  <div>
-    <label for="follow-focus-input">Selection Follows Focus: </label>
-    <input id="follow-focus-input" type="checkbox" [(ngModel)]="followFocus" />
-  </div>
-
-  <div>
-    <label for="skip-disabled-input">Skip Disabled Options: </label>
-    <input
-      id="skip-disabled-input"
-      type="checkbox"
-      [(ngModel)]="skipDisabled"
-    />
-  </div>
-
-  <div>
-    <label for="multiselectable-input">Multiselectable: </label>
-    <input
-      id="multiselectable-input"
-      type="checkbox"
-      [(ngModel)]="multiselectable"
-    />
-  </div>
-
-  <div>
-    <label for="current-index-input">Current Index: </label>
-    <input
-      id="current-index-input"
-      type="number"
-      min="0"
-      [max]="states.length - 1"
-      [(ngModel)]="currentIndex"
-    />
-  </div>
-
-  <div>
-    <label for="selected-indices-input">Selected Indices: </label>
-    <select
-      id="selected-indices-input"
-      [(ngModel)]="selectedIndices"
-      [multiple]="multiselectable"
-    >
-      @for (state of states; track state) {
-      <option [value]="$index">{{ state }}</option>
-      }
-    </select>
+<div class="table-example">
+  <div class="scroll-container">
+    <table [wrap]="true" [skipDisabled]="true" grid>
+      <tr row>
+        <td gridcell>
+          <button widget>Click me!</button>
+        </td>
+        <td gridcell>
+          <label>Check me: </label>
+          <input type="checkbox" widget>
+        </td>
+        <td gridcell>
+          <input widget [editable]="true">
+        </td>
+        <td gridcell>Empty cell</td>
+      </tr>
+      <tr row>
+        <td [colspan]="2" gridcell>
+          <div class="multi-widget-wrapper">
+            <div class="multi-widget-row">
+              <div widget></div>
+              <div widget></div>
+              <div widget></div>
+              <div widget></div>
+              <div [disabled]="true" widget></div>
+              <div [disabled]="true" widget></div>
+            </div>
+            <div class="multi-widget-row">
+              <div [disabled]="true" widget></div>
+              <div [disabled]="true" widget></div>
+              <div widget></div>
+              <div widget></div>
+              <div [disabled]="true" widget></div>
+              <div [disabled]="true" widget></div>
+            </div>
+          </div>
+        </td>
+        <td gridcell>Empty cell</td>
+        <td gridcell>
+          <input type="date" [editable]="true" widget>
+        </td>
+      </tr>
+      <tr row>
+        <td gridcell>
+          <label>Radio button: </label>
+          <input type="radio" name="radio button example" widget>
+        </td>
+        <td gridcell>Empty cell</td>
+        <td gridcell>
+          <select [usesArrowKeys]="true" widget>
+            <option value="1">Option 1</option>
+            <option value="2">Option 2</option>
+            <option value="3">Option 3</option>
+            <option value="4">Option 4</option>
+            <option value="5">Option 5</option>
+            <option value="6">Option 6</option>
+          </select>
+        </td>
+        <td gridcell>
+          <a href="/" widget>Click me!</a>
+        </td>
+      </tr>
+      <tr row>
+        <td gridcell>Empty cell</td>
+        <td gridcell>
+          <p style="margin-top: 0">Radio group!</p>
+          <form>
+            <input type="radio" name="radio group 1" widget>
+            <input type="radio" name="radio group 1" widget>
+            <input type="radio" name="radio group 1" widget>
+            <input type="radio" name="radio group 1" widget>
+            <input type="radio" name="radio group 1" widget>
+            <input type="radio" name="radio group 1" widget>
+          </form>
+        </td>
+        <td gridcell>
+          <input type="color" [editable]="true" widget>
+        </td>
+        <td gridcell>
+          <input type="range" widget [usesArrowKeys]="true">
+        </td>
+      </tr>
+    </table>
   </div>
 </div>
