--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,80 +1,65 @@
 :host {
   display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+td {
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  border-collapse: collapse;
+  background-color: white;
+  text-align: center;
+}
+
+td[aria-disabled="true"] {
+  background-color: lightgrey;
+}
+
+td[tabindex="0"][aria-disabled="true"]:focus {
+  background-color: lightgrey;
+}
+
+td[tabindex="0"]:focus {
+  outline: -webkit-focus-ring-color auto 1px;
+  background-color: aliceblue;
+}
+
+.scroll-container {
+  overflow: scroll;
+  width: fit-content;
+  border: 1px solid black;
+}
+
+.table-example {
+  padding: 1rem;
+  background-color: lightgrey;
+  border: 1px solid black;
+}
+
+div[widget] {
+  border: 1px solid black;
+  padding: 1rem;
+  display: inline-block;
+}
+
+div[widget][aria-disabled="true"] {
+  background-color: lightgrey;
+}
+
+td[aria-disabled="true"] div[widget][aria-disabled="true"] {
+  background-color: darkgrey;
+}
+
+.multi-widget-wrapper {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
   align-items: center;
-  flex-direction: column;
-  gap: 32px;
 }
 
-.listbox-container {
-  position: relative;
-  font-size: 1.5rem;
-  font-family: system-ui;
-  border: 1px solid #888;
-  overflow: hidden;
-}
-
-.typeahead {
-  position: absolute;
-  bottom: -2px;
-  right: -2px;
-  padding: 2px 8px;
-  color: #328bf5;
-  background-color: #ddecfd;
-  border: 2px solid #328bf5;
-  border-top-left-radius: 4px;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  list-style-type: none;
-  max-width: 300px;
-  max-height: 400px;
-  overflow-y: scroll;
-  user-select: none;
-}
-
-li {
+.multi-widget-row {
   display: flex;
-  justify-content: space-between;
-  cursor: pointer;
-  outline: none;
-  padding: 16px 32px;
-  border-radius: 2px;
-  border: 2px solid transparent;
-}
-
-li:hover {
-  background-color: #eaeaea;
-}
-
-ul:focus-within li.active,
-ul:focus-within li.focused {
-  border-color: #328bf5;
-}
-
-li[aria-selected="true"] {
-  color: #328bf5;
-  background-color: #ddecfd;
-}
-
-.checkmark {
-  visibility: hidden;
-}
-
-li[aria-selected="true"] .checkmark {
-  visibility: visible;
-}
-
-.hud {
-  max-width: 300px;
-  font-family: system-ui;
-  background-color: #222;
-  color: white;
-  padding: 16px 32px;
-  font-size: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  gap: 1rem;
 }
